...
        when {
            // Loading UI
            uiState.isLoading && uiState.goals.isEmpty() -> CircularProgressIndicator(Modifier.padding(all = 24.dp))
            uiState.errorMessage != null && uiState.goals.isEmpty() -> Text(uiState.errorMessage, Modifier.padding(24.dp))
            uiState.selectedType == WorkoutType.STRENGTH && uiState.goals.isEmpty() ||
                uiState.selectedType == WorkoutType.CARDIO && uiState.cardioGoals.isEmpty() -> Text(
                text = "Add exercises in Settings to create goals.",
                modifier = Modifier.padding(24.dp),
                style = EmptyStateTextStyle,
                color = MaterialTheme.colorScheme.onBackground,
            )
            // Display once loading is complete
            else -> LazyColumn(Modifier.fillMaxSize()) {
...
