...
            icon = painterResource(R.drawable.icon_history)
        )
        // Display the search input and dropdown browsing controls
        OutlinedTextField(
            value = uiState.searchText,
            onValueChange = onSearchChanged,
            label = { Text("Search workouts") },
            singleLine = true,
            modifier = Modifier.fillMaxWidth().padding(
                bottom = 12.dp,
                start = 12.dp,
                end = 12.dp),
        )
...
